[tool.poetry]
name = "DLMAIIAC01_CODE"
version = "0.1.0"
description = "Calculations and visualization for DLMAIIAC01."
authors = ["Ben Felder <ben@felder.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pathspec = "^0.11.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"
ruff = "^0.0.254"
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format
line-length = 88
target_version = ["py311"]

[tool.ruff]
# https://pypi.org/project/ruff/
line-length = 88
target-version = "py311"
ignore = ["E402","F841","F401","E302","E305"]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files.html
combine_star = true
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = []
line_length = 88
multi_line_output = 3
profile = "black"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
# disallow_untyped_calls = true
# disallow_untyped_decorators = true
# disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
ignore_missing_imports = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
